--- a/app/views/changesets/_changes.erb
+++ b/app/views/changesets/_changes.erb
@@ -1,6 +1,10 @@
 <% changes.each do |change| -%>
   <li<%= cycle '', ' class="shade"' %>>
     <span class="<%=h change.name.downcase %>" title="<%= word_for_change(change.name) %>"><%= change.name %></span> 
-    <%= link_to_node change.path, change.path, changeset.revision %> <% if change.modified? %> <%= link_to 'view', "##{dom_id change}", :class => 'viewdiff' %><% end %>
+    <%= link_to_node change.path, change.path, changeset.revision %>
+    (<%= link_to pluralize(change.comments.size, 'comment'), changeset_change_path(changeset, change) %>) 
+    <% if change.modified? %> 
+      <%= link_to 'view', "##{dom_id change}", :class => 'viewdiff' %>
+    <% end %>
   </li>
 <% end -%>
