--- a/app/views/changes/_comments.erb
+++ b/app/views/changes/_comments.erb
@@ -3,14 +3,15 @@
   <thead>
     <tr><th>Author</th><th>Comment</th><th>Date</th></tr>
   </thead>
-  <tbody>
-    <% comments.each do |comment| %>
-    <tr>
-      <td><%= comment.author %></td>
-      <td><%= comment.body %></td>
-      <td><%= comment.created_at %></td>
-    </tr>
-    <% end %>
+  <tbody id="comments_body">
+    <%= render :partial => 'comments/comment', :collection => comments %>
   </tbody>
 </table>
+<% end %>
+
+<% comment = Comment.new %>
+<% remote_form_for([change, comment]) do |f| %>
+  <div><%= f.text_area(:body, :rows => 10) %></div>
+  <div><label for="comment_author">Your name</label>: <%= f.text_field(:author) %></div>
+  <div><%= f.submit('post') %></div>
 <% end %>
