--- a/app/views/changesets/index.html.erb
+++ b/app/views/changesets/index.html.erb
@@ -26,16 +26,7 @@
   <% @changesets.each do |changeset| -%>
     <% user = @users[changeset.author] -%>
   <li class="changeset clearfix" id="changeset-<%= changeset.revision %>">
-    <div class="cs-meta">
-      <%= avatar_for(user) %>
-      <p>
-        <span class="change-number"><%= link_to(changeset.revision, hosted_url(changeset.repository, :changeset, :id => changeset.revision)) %></span>
-      </p>
-    </div>
-    <div class="cs-log clearfix">      
-       <%= simple_format(h(changeset.message)) %>
-      <span class="timenauthor">by <%= changeset.author %>, <%= jstime changeset.changed_at %></span>
-    </div>
+		<%= render :partial => 'meta', :locals => {:changeset => changeset, :user => user} %>
   </li>
   <% end -%>
   <% else %>
